--- a/views/layoutNoLogin.html
+++ b/views/layoutNoLogin.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html ng-app="mcms">
 <head>
-    <link rel="stylesheet" href="/packages/mcms-node-admin/css/min/styles.min.css">
+    <link rel="stylesheet" href="/assets/css/min/styles.min.css">
     <title>{% block title %}Mcms Admin{% endblock %}</title>
-    <script src="/packages/mcms-node-admin/js/assets/jquery/dist/jquery.min.js"></script>
+    <script src="/assets/bower_components/jquery/dist/jquery.min.js"></script>
 </head>
 <body class="login example2">
 
