--- a/views/partials/admin/navBar.html
+++ b/views/partials/admin/navBar.html
@@ -1,4 +1,4 @@
-{% import "partials/macros/menu-macros.html" as macros %}
+{% import "../macros/menu-macros.html" as macros %}
 <div class="navbar navbar-inverse navbar-fixed-top">
     <!-- start: TOP NAVIGATION CONTAINER -->
     <div class="container">
