--- a/views/partials/loginForm.html
+++ b/views/partials/loginForm.html
@@ -1,4 +1,4 @@
-{% extends '/layoutNoLogin.html' %}
+{% extends '../layoutNoLogin.html' %}
 {% block title %}Login{% endblock %}
 {% block content %}
 
