--- a/views/admin.layout.html
+++ b/views/admin.layout.html
@@ -26,7 +26,7 @@
         <div class="main-content">
             <div class="container">
                 <div class="row">
-                    <ng-include src="'/app/components/pageHeader.component.html'"></ng-include>
+                    <ng-include src="'/app/components/pageHeader.component.html'" ng-controller="PageHeaderController as pageHeader"></ng-include>
                 </div><!-- END ROW -->
                 <div class="row">
                     <div ng-view></div>
@@ -74,11 +74,14 @@
 <script src="/assets/bower_components/lodash/lodash.min.js"></script>
 <script src="/assets/bower_components/moment/min/moment.min.js"></script>
 <!-- endbuild -->
-
+{% autoescape false %}
 <script>
+
     var adminModules = angular.fromJson({{ adminModulesJson }});
+
     var CSRF = '{{ CSRF }}';
 </script>
+{% endautoescape %}
 <!-- build:js /assets/build/js/app.js-->
 <script src="/app/app.module.js"></script>
 
@@ -92,11 +95,17 @@
 <script src="/app/dashboard/dashboard.controller.js"></script>
 
 <script src="/app/components/pageHeader.controller.js"></script>
+
+<script src="/app/users/users.module.js"></script>
+<script src="/app/users/user-list.controller.js"></script>
+<script src="/app/users/user.controller.js"></script>
 <!-- endbuild -->
+
 
 {% for module in adminModules %}
 {% for file in module[loadFilesFrom].js %}
-<script src="/{{module.baseFolder}}/{{ file }}"></script>
+<script src="{{ module.baseFolder }}{{ file }}"></script>
+{{ file }}
 {% endfor %}
 {% endfor %}
 
