added angular app

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4372,3 +4372,16 @@ button {
     background-color: #F0F0F0;
     border: 1px solid black;
 }
+
+.drop-box {
+    background: #F8F8F8;
+    border: 5px dashed #DDD;
+    width: 200px;
+    height: 65px;
+    text-align: center;
+    padding-top: 25px;
+    margin: 10px;
+}
+.dragover {
+    border: 5px dashed blue;
+}
