--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -4957,3 +4957,24 @@ td.column-right {
 .spacer-left { margin-left: 10px; }
 .spacer-right { margin-right: 10px; }
 .spacer { margin: 10px; }
+.drop-box {
+	background: #F8F8F8;
+	border: 5px dashed #DDD;
+	width: 200px;
+	height: 65px;
+	text-align: center;
+	padding-top: 25px;
+	margin: 10px;
+}
+.dragover {
+	border: 5px dashed blue;
+}
+.preview {
+	padding-top: 30px;
+	clear: both;
+}
+
+.preview img, .preview audio, .preview video {
+	max-width: 300px;
+	max-height: 150px;
+}
