--- a/views/admin.layout.template.html
+++ b/views/admin.layout.template.html
@@ -79,6 +79,7 @@
 <script src="/public/assets/bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 <script src="/public/assets/bower_components/angular-redactor/angular-redactor.js"></script>
 <script src="/public/assets/bower_components/angular-route/angular-route.min.js"></script>
+<script src="/public/assets/bower_components/ng-file-upload/ng-file-upload.min.js"></script>
 <script src="/public/assets/bower_components/lodash/lodash.min.js"></script>
 <script src="/public/assets/bower_components/moment/min/moment.min.js"></script>
 <!-- endbuild -->
@@ -105,6 +106,7 @@
 <script src="/public/admin.app/components/compareTo.directive.js"></script>
 <script src="/public/admin.app/components/alertMessage.directive.js"></script>
 <script src="/public/admin.app/components/selectBox.directive.js"></script>
+<script src="/public/admin.app/components/uploadBox.directive.js"></script>
 
 <script src="/public/admin.app/dashboard/dashboard.module.js"></script>
 <script src="/public/admin.app/dashboard/dashboard.controller.js"></script>
