added angular app

--- a/views/admin.layout.template.html
+++ b/views/admin.layout.template.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="/public/assets/css/main-responsive.css"/>
     <link rel="stylesheet" href="/public/assets/css/theme_light.css"/>
     <link rel="stylesheet" href="/public/assets/redactor/redactor.css"/>
+    <link rel="stylesheet" href="/public/assets/bower_components/ng-sortable/dist/ng-sortable.css"/>
+
+
     <!-- endbuild -->
 </head>
 <body ng-controller="mainCtrl as main" class="page-full-width">
@@ -82,6 +85,7 @@
 <script src="/public/assets/bower_components/ng-file-upload/ng-file-upload.min.js"></script>
 <script src="/public/assets/bower_components/lodash/lodash.min.js"></script>
 <script src="/public/assets/bower_components/moment/min/moment.min.js"></script>
+<script src="/public/assets/bower_components/ng-sortable/dist/ng-sortable.min.js"></script>
 <!-- endbuild -->
 
 <script>
