added angular app

--- a/views/admin.layout.html
+++ b/views/admin.layout.html
@@ -111,6 +111,11 @@
 <script src="/admin.app/components/alertMessage.directive.js"></script>
 <script src="/admin.app/components/selectBox.directive.js"></script>
 <script src="/admin.app/components/uploadBox.directive.js"></script>
+<script src="/admin.app/components/tabs/mcmsTabs.module.js"></script>
+<script src="/admin.app/components/tabs/mcmsTabs.config.js"></script>
+<script src="/admin.app/components/tabs/mcmsTabs.directive.js"></script>
+<script src="/admin.app/components/tabs/tabButton.directive.js"></script>
+<script src="/admin.app/components/tabs/tabContent.directive.js"></script>
 
 <script src="/admin.app/dashboard/dashboard.module.js"></script>
 <script src="/admin.app/dashboard/dashboard.controller.js"></script>
