--- a/views/admin.layout.html
+++ b/views/admin.layout.html
@@ -90,7 +90,8 @@
 
 <script>
     var adminModules = angular.fromJson({{ adminModulesJson|safe }});
-    var CSRF = '{{ CSRF }}';
+    var CSRF = '{{ CSRF }}',
+            Translations = '{{ Translations|json|safe }}';;
 </script>
 <!-- build:js /assets/build/js/app.js-->
 <script src="/admin.app/core/named-routes.js"></script>
@@ -111,11 +112,13 @@
 <script src="/admin.app/components/alertMessage.directive.js"></script>
 <script src="/admin.app/components/selectBox.directive.js"></script>
 <script src="/admin.app/components/uploadBox.directive.js"></script>
+<script src="/admin.app/components/paginate.directive.js"></script>
 <script src="/admin.app/components/tabs/mcmsTabs.module.js"></script>
 <script src="/admin.app/components/tabs/mcmsTabs.config.js"></script>
 <script src="/admin.app/components/tabs/mcmsTabs.directive.js"></script>
 <script src="/admin.app/components/tabs/tabButton.directive.js"></script>
 <script src="/admin.app/components/tabs/tabContent.directive.js"></script>
+<script src="/admin.app/components/formFilter.directive.js"></script>
 
 <script src="/admin.app/dashboard/dashboard.module.js"></script>
 <script src="/admin.app/dashboard/dashboard.controller.js"></script>
