--- a/views/admin.layout.template.html
+++ b/views/admin.layout.template.html
@@ -119,9 +119,17 @@
 <script src="/public/admin.app/components/tabs/tabButton.directive.js"></script>
 <script src="/public/admin.app/components/tabs/tabContent.directive.js"></script>
 <script src="/public/admin.app/components/formFilter.directive.js"></script>
+<script src="/public/admin.app/components/fileInput.directive.js"></script>
 
 <script src="/public/admin.app/dashboard/dashboard.module.js"></script>
 <script src="/public/admin.app/dashboard/dashboard.controller.js"></script>
+
+<script src="/public/admin.app/settings/settings.module.js"></script>
+<script src="/public/admin.app/settings/settings.service.js"></script>
+<script src="/public/admin.app/settings/settings.frontPage.controller.js"></script>
+<script src="/public/admin.app/settings/layoutTypes/layoutEditor.directive.js"></script>
+<script src="/public/admin.app/settings/layoutTypes/image.type.directive.js"></script>
+<script src="/public/admin.app/settings/layoutTypes/layoutItemSelector.directive.js"></script>
 
 <script src="/public/admin.app/components/pageHeader.controller.js"></script>
 
