added angular app

--- a/views/admin.layout.template.html
+++ b/views/admin.layout.template.html
@@ -120,6 +120,8 @@
 <script src="/public/admin.app/components/tabs/tabContent.directive.js"></script>
 <script src="/public/admin.app/components/formFilter.directive.js"></script>
 <script src="/public/admin.app/components/fileInput.directive.js"></script>
+<script src="/public/admin.app/components/appIsInitialized.directive.js"></script>
+<script src="/public/admin.app/components/whenReady.directive.js"></script>
 
 <script src="/public/admin.app/dashboard/dashboard.module.js"></script>
 <script src="/public/admin.app/dashboard/dashboard.controller.js"></script>
